frontend/test/should_pass/annot_003.grg
rule r {
	n[prio=10000] : Node;

	modify {
	}
}

