frontend/test/should_fail/independent_007.grg
rule r
{
	independent {
        iterated {
            n:Node;
			
            modify {
            }
        }
	}
	
	replace {
	}
}
